Troubleshooting spacing issues on site

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700&display=swap');
 
 body {
-  background-color: #fff;
+  position: relative;
+  margin: 0;
+  padding: 0;
+  border: 0;
 }
 
 .nav-item {
@@ -17,10 +20,10 @@ body {
   font-weight: 400;
 }
 
-#footer {
-  height: 200px;
-  border-top: 1px solid #ededed;
-  color: #A9A9A9;
+#footer-details {
+  min-height: 130px;
+  padding-top: 20px;
+  text-align: center;
 }
 
 .card {
@@ -71,9 +74,8 @@ p.card-text {
   font-size: 10px;
 }
 
-.end-site{
+.end-site {
   font-family: "Quicksand", sans-serif;
   font-weight: 500;
   color: #fff;
-  padding: 20px;
 }
